tests/error/undefined_func.clac
// TEST: expect_compile_error
5 nonexistent print quit
